Pass directory to MiniAaptExecutableMain
Reviewed By: mykola-semko

fbshipit-source-id: 2c6b8275f86434cc0c02fa54c14b2a6d13d3efa5